# audio-transcriber

./: .autoenv.zsh  .autoenv_leave.zsh  .gitignore  README.md  dl-audio  pyproject.toml  transcribe
src/: main.py
