[project]
name = "audio-transcriber"
version = "0.1.0"
description = "Transcribe audio files using whisper"
readme = "README.md"
# Ubuntu 22.04.5 LTS ==3.10.12
requires-python = ">=3.10.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "soundfile>=0.13.1",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
audio-transcriber = "main:main"

[tool.uv]
package = true
